--- a/Ix.NET/Source/System.Interactive.Async.Providers/AsyncQueryable.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/AsyncQueryable.Generated.tt
@@ -147,6 +147,7 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
 	}
 
 	var pars = string.Join(", ", m.GetParameters().Select((p, i) => (i == parCount - 1 && isParams ? "params " : "") + toQuoted(p.ParameterType, i) + " " + p.Name));
+	var quotedPars = string.Join(", ", m.GetParameters().Select((p, i) => "default(" + toQuoted(p.ParameterType, i) + ")"));
 
 	if (m.IsDefined(typeof(System.Runtime.CompilerServices.ExtensionAttribute), true))
 	{
@@ -234,6 +235,9 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
 	}
 
 	var expr = "Expression.Call(" + mtd + ", " + string.Join(", ", quotedArgs) + ")";
+
+	var infoofmtd = "InfoOf(() => AsyncQueryable." + name + "(" + quotedPars + "))";
+	var infoofexpr = "Expression.Call(" + infoofmtd + ", " + string.Join(", ", quotedArgs) + ")";
 #>
 		public static <#=ret#> <#=name#>(<#=pars#>)
 		{
@@ -259,7 +263,11 @@ if (any)
 <#
 }
 #>
+#if CRIPPLED_REFLECTION
+			return <#=cast#><#=provider#>.<#=factory#>(<#=infoofexpr#><#=rem#>);
+#else
 			return <#=cast#><#=provider#>.<#=factory#>(<#=expr#><#=rem#>);
+#endif
 		}
 
 <#
