--- a/Rx.NET/Source/src/System.Reactive/Linq/Observable/CombineLatest.Generated.tt
+++ b/Rx.NET/Source/src/System.Reactive/Linq/Observable/CombineLatest.Generated.tt
@@ -51,6 +51,8 @@ for (var j = 1; j <= i; j++)
             _resultSelector = resultSelector;
         }
 
+        protected override IDisposable CreateSink(IObserver<TResult> observer, IDisposable cancel) => new _(_resultSelector, observer, cancel);
+
         protected override IDisposable Run(IObserver<TResult> observer, IDisposable cancel, Action<IDisposable> setSink)
         {
             var sink = new _(_resultSelector, observer, cancel);
