--- a/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.Generated.tt
+++ b/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.Generated.tt
@@ -26,7 +26,7 @@ for (var i = 3; i <= 16; i++)
     var vs = string.Join(", ", Enumerable.Range(1, i).Select(j => "_observer" + j + ".Values.Dequeue()"));
     var ss = string.Join(", ", Enumerable.Range(1, i).Select(j => "_source" + j));
 #>
-    internal sealed class Zip<<#=ts#>, TResult> : Producer<TResult>
+    internal sealed class Zip<<#=ts#>, TResult> : Producer<TResult, Zip<<#=ts#>, TResult>._>
     {
 <#
 for (var j = 1; j <= i; j++)
@@ -51,16 +51,11 @@ for (var j = 1; j <= i; j++)
             _resultSelector = resultSelector;
         }
 
-        protected override IDisposable CreateSink(IObserver<TResult> observer, IDisposable cancel) => new _(_resultSelector, observer, cancel);
+        protected override _ CreateSink2(IObserver<TResult> observer, IDisposable cancel) => new _(_resultSelector, observer, cancel);
 
-        protected override IDisposable Run(IObserver<TResult> observer, IDisposable cancel, Action<IDisposable> setSink)
-        {
-            var sink = new _(_resultSelector, observer, cancel);
-            setSink(sink);
-            return sink.Run(<#=ss#>);
-        }
+        protected override IDisposable Run(_ sink) => sink.Run(<#=ss#>);
 
-        private sealed class _ : ZipSink<TResult>
+        internal sealed class _ : ZipSink<TResult>
         {
             private readonly Func<<#=ts#>, TResult> _resultSelector;
 
