--- a/Ix.NET/Source/System.Interactive.Async/Average.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async/Average.Generated.tt
@@ -71,6 +71,26 @@ foreach (var o in os)
             return source.Select(selector).Average(cancellationToken);
         }
 
+        public static Task<<#=o.res#>> Average<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, Task<<#=o.type#>>> selector)
+        {
+            if (source == null)
+                throw new ArgumentNullException(nameof(source));
+            if (selector == null)
+                throw new ArgumentNullException(nameof(selector));
+
+            return source.Select(selector).Average(CancellationToken.None);
+        }
+
+        public static Task<<#=o.res#>> Average<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, Task<<#=o.type#>>> selector, CancellationToken cancellationToken)
+        {
+            if (source == null)
+                throw new ArgumentNullException(nameof(source));
+            if (selector == null)
+                throw new ArgumentNullException(nameof(selector));
+
+            return source.Select(selector).Average(cancellationToken);
+        }
+
 <#
 }
 #>
