--- a/Ix.NET/Source/System.Interactive.Async/MinMax.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async/MinMax.Generated.tt
@@ -99,6 +99,26 @@ else
             return source.Select(selector).<#=m#>(cancellationToken);
         }
 
+        public static Task<<#=t#>> <#=m#><TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, Task<<#=t#>>> selector)
+        {
+            if (source == null)
+                throw new ArgumentNullException(nameof(source));
+            if (selector == null)
+                throw new ArgumentNullException(nameof(selector));
+
+            return source.Select(selector).<#=m#>(CancellationToken.None);
+        }
+
+        public static Task<<#=t#>> <#=m#><TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, Task<<#=t#>>> selector, CancellationToken cancellationToken)
+        {
+            if (source == null)
+                throw new ArgumentNullException(nameof(source));
+            if (selector == null)
+                throw new ArgumentNullException(nameof(selector));
+
+            return source.Select(selector).<#=m#>(cancellationToken);
+        }
+
 <#
     }
 }
