--- a/Ix.NET/Source/System.Interactive.Async/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async/Sum.Generated.tt
@@ -40,7 +40,7 @@ foreach (var o in os)
             if (source == null)
                 throw new ArgumentNullException(nameof(source));
 
-            return source.Aggregate(<#=o.zero#>, (x, y) => x + y, CancellationToken.None);
+            return source.Aggregate(<#=o.zero#>, (x, y) => x + y<#=n#>, CancellationToken.None);
         }
 
         public static Task<<#=o.type#>> Sum(this IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
