--- a/Ix.NET/Source/System.Interactive.Async/MinMax.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async/MinMax.Generated.tt
@@ -46,13 +46,13 @@ foreach (var m in new[] { "Max", "Min" })
 if (n)
 {
 #>
-            return source.Aggregate(default(<#=t#>), Nullable<#=m#>, CancellationToken.None);
+            return source.Aggregate(default(<#=t#>), new Func<<#=t#>, <#=t#>, <#=t#>>(Nullable<#=m#>), CancellationToken.None);
 <#
 }
 else
 {
 #>
-            return source.Aggregate(Math.<#=m#>, CancellationToken.None);
+            return source.Aggregate(new Func<<#=t#>, <#=t#>, <#=t#>>(Math.<#=m#>), CancellationToken.None);
 <#
 }
 #>
@@ -67,13 +67,13 @@ else
 if (n)
 {
 #>
-            return source.Aggregate(default(<#=t#>), Nullable<#=m#>, cancellationToken);
+            return source.Aggregate(default(<#=t#>), new Func<<#=t#>, <#=t#>, <#=t#>>(Nullable<#=m#>), cancellationToken);
 <#
 }
 else
 {
 #>
-            return source.Aggregate(Math.<#=m#>, cancellationToken);
+            return source.Aggregate(new Func<<#=t#>, <#=t#>, <#=t#>>(Math.<#=m#>), cancellationToken);
 <#
 }
 #>
