--- a/Ix.NET/Source/System.Interactive.Async.Providers/System/Linq/AsyncQueryableEx.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/System/Linq/AsyncQueryableEx.Generated.tt
@@ -1,6 +1,11 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿// Licensed to the .NET Foundation under one or more agreements.
+// The .NET Foundation licenses this file to you under the Apache 2.0 License.
+// See the LICENSE file in the project root for more information. 
+
+<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ assembly name="System.Core" #>
 <#@ assembly name="$(ProjectDir)\..\System.Linq.Async\bin\$(Configuration)\net46\System.Linq.Async.dll" #>
+<#@ assembly name="$(ProjectDir)\..\System.Interactive.Async\bin\$(Configuration)\net46\System.Interactive.Async.dll" #>
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Threading" #>
@@ -8,7 +13,6 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 <#
-var failing = new[] { "TakeLast" };
 var exclude = new[] { "ForEach", "ForEachAsync", "ToEnumerable", "ToAsyncEnumerable", "ToObservable", "AsAsyncEnumerable" };
 
 var toQuotedImpl = default(Func<Type, int, bool, string>);
@@ -95,24 +99,20 @@ return name;
 };
 
 var toQuoted = new Func<Type, int, string>((t, i) => toQuotedImpl(t, i, true));
-
-var index = new Dictionary<string, int>();
 #>
-using System;
 using System.Collections.Generic;
-using System.Linq;
 using System.Linq.Expressions;
+using System.Reflection;
 using System.Threading;
 using System.Threading.Tasks;
-using Xunit;
 
-namespace Tests
+namespace System.Linq
 {
-    public class AsyncQueryableExTests
+    public static partial class AsyncQueryableEx
     {
 <#
 // NOTE: Just including extension methods
-foreach (var m in typeof(AsyncEnumerable).GetMethods()
+foreach (var m in typeof(AsyncEnumerableEx).GetMethods()
                         .Where(m => m.IsStatic)
                         .Where(m => !exclude.Contains(m.Name))
                         .Where(m => m.IsDefined(typeof(System.Runtime.CompilerServices.ExtensionAttribute), true))
@@ -152,6 +152,7 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
     }
 
     var pars = string.Join(", ", m.GetParameters().Select((p, i) => (i == parCount - 1 && isParams ? "params " : "") + toQuoted(p.ParameterType, i) + " " + p.Name));
+    var quotedPars = string.Join(", ", m.GetParameters().Select((p, i) => "default(" + toQuoted(p.ParameterType, i) + ")"));
 
     if (m.IsDefined(typeof(System.Runtime.CompilerServices.ExtensionAttribute), true))
     {
@@ -240,231 +241,38 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
 
     var expr = "Expression.Call(" + mtd + ", " + string.Join(", ", quotedArgs) + ")";
 
-    var testName = m.Name;
-
-    var num = 0;
-    if (!index.TryGetValue(testName, out num))
-    {
-        index[testName] = 0;
-    }
-
-    index[testName] = num + 1;
-
-    testName += (num + 1);
+    var infoofmtd = "InfoOf(() => AsyncQueryableEx." + name + "(" + quotedPars + "))";
+    var infoofexpr = "Expression.Call(" + infoofmtd + ", " + string.Join(", ", quotedArgs) + ")";
 #>
-        [Fact]
-        public void <#=testName#>()
+        public static <#=ret#> <#=name#>(<#=pars#>)
         {
 <#
-var indexes = new List<int>();
-var j = 0;
+var any = false;
 foreach (var p in m.GetParameters())
 {
     if (!p.ParameterType.IsValueType && !p.ParameterType.IsGenericParameter)
     {
-        indexes.Add(j);
-    }
-
-    j++;
-}
-
-var tm = m;
-
-if (tm.IsGenericMethodDefinition)
-{
-    tm = m.MakeGenericMethod(m.GetGenericArguments().Select(a =>
-    {
-        var cs = a.GetGenericParameterConstraints();
-        if (cs.Length > 0)
-        {
-            var bc = cs.FirstOrDefault(c => c.IsClass);
-            if (bc != null)
-            {
-                return bc;
-            }
-        }
-
-        return typeof(int);
-    }).ToArray());
-}
-
-var opName = tm.Name;
-
-if (tm.IsGenericMethod)
-{
-    opName += "<" + string.Join(", ", tm.GetGenericArguments().Select(a => toQuotedImpl(a, -1, false))) + ">";
-}
-
-var getVal = default(Func<Type, int, string>);
-getVal = (tp, pos) =>
-{
-    if (tp.IsGenericType)
-    {
-        var tpd = tp.GetGenericTypeDefinition();
-
-        if (tpd == typeof(IAsyncEnumerable<>))
-        {
-            var tpa = tp.GetGenericArguments()[0];
-            var et = toQuotedImpl(tpa, -1, false);
-            var res = "new " + et + "[] { default(" + et + ") }.ToAsyncEnumerable()";
-
-            if (pos == 0)
-            {
-                res += ".AsAsyncQueryable()";
-            }
-
-            return res;
-        }
-        else if (tpd == typeof(IOrderedAsyncEnumerable<>))
-        {
-            var tpa = tp.GetGenericArguments()[0];
-            var res = "new " + toQuotedImpl(tpa, -1, false) + "[0].ToAsyncEnumerable()";
-
-            if (pos == 0)
-            {
-                res += ".AsAsyncQueryable()";
-            }
-
-            return res + ".OrderBy(x => x)";
-        }
-        else if (tpd.Name.StartsWith("Func"))
-        {
-            var inv = tp.GetMethod("Invoke");
-                
-            var largs = string.Join(", ", inv.GetParameters().Select((lp, lpi) => toQuoted(lp.ParameterType, -1) + " arg" + lpi).ToArray());
-
-            var lret = "default(" + toQuoted(inv.ReturnType, -1) + ")";
-
-            if (inv.ReturnType.IsGenericType)
-            {
-                if (inv.ReturnType.GetGenericTypeDefinition() == typeof(IAsyncEnumerable<>))
-                {
-                    var tpa = inv.ReturnType.GetGenericArguments()[0];
-                    var et = toQuotedImpl(tpa, -1, false);
-                    lret = "new " + et + "[] { default(" + et + ") }.ToAsyncEnumerable()";
-                }
-            }
-            else if (inv.ReturnType == typeof(bool))
-            {
-                lret = "true";
-            }
-
-            return "(" + largs + ") => " + lret;
-        }
-        else if (tpd.Name.StartsWith("Action"))
-        {
-            var inv = tp.GetMethod("Invoke");
-                
-            var largs = string.Join(", ", inv.GetParameters().Select((lp, lpi) => toQuoted(lp.ParameterType, -1) + " arg" + lpi).ToArray());
-            var lret = "Console.WriteLine()";
-
-            return "(" + largs + ") => " + lret;
-        }
-        else if (tpd == typeof(IEqualityComparer<>))
-        {
-            var tpa = tp.GetGenericArguments()[0];
-
-            return "EqualityComparer<" + toQuotedImpl(tpa, -1, false) + ">.Default";
-        }
-        else if (tpd == typeof(IComparer<>))
-        {
-            var tpa = tp.GetGenericArguments()[0];
-
-            return "Comparer<" + toQuotedImpl(tpa, -1, false) + ">.Default";
-        }
-        else if (tpd == typeof(IObserver<>))
-        {
-            var tpa = tp.GetGenericArguments()[0];
-
-            return "new NopObserver<" + toQuotedImpl(tpa, -1, false) + ">()";
-        }
-    }
-    else if (tp == typeof(CancellationToken))
-    {
-        return "CancellationToken.None";
-    }
-    else if (tp == typeof(Action))
-    {
-        return "() => { }";
-    }
-    else if (tp.IsArray)
-    {
-        var tpa = tp.GetElementType();
-        var et = toQuotedImpl(tpa, -1, false);
-
-        return "new " + et + "[] { default(" + et + ") }";
-    }
-    else if (tp == typeof(int))
-    {
-        return "1";
-    }
-
-    return "default(" + toQuoted(tp, pos) + ")";
-};
-
-var vals = tm.GetParameters().Select((p, i) => getVal(p.ParameterType, i)).ToArray();
-var nulls = tm.GetParameters().Select((p, i) => "default(" + toQuoted(p.ParameterType, i) + ")").ToArray();
-
-var len = vals.Length;
-
-if (indexes.Count != 0)
-{
-    foreach (var idx in indexes)
-    {
-        var args = string.Join(", ", Enumerable.Range(0, len).Select(k => k == idx ? nulls[k] : vals[k]).ToArray());
-        var nullArg = tm.GetParameters()[idx].Name;
+        any = true;
 #>
-            AssertEx.Throws<ArgumentNullException>(() => AsyncQueryable.<#=opName#>(<#=args#>), ane => ane.ParamName == "<#=nullArg#>");
-<#
-    }
-#>
-
-<#
-}
-
-{
-    var args = string.Join(", ", vals);
-#>
-            var res = AsyncQueryable.<#=opName#>(<#=args#>);
-<#
-    var tmRet = tm.ReturnType;
-
-    if (tmRet.IsGenericType)
-    {
-        tmRet = tmRet.GetGenericTypeDefinition();
-    }
-
-    if (tm.Name == "Repeat" || tm.Name == "Expand")
-    {
-#>
-            res = res.Take(5);
-<#
-    }
-
-    if (!failing.Contains(tm.Name))
-    {
-        if (tmRet == typeof(Task<>))
-        {
-#>
-            AssertEx.SucceedOrFailProper(() => res.Wait());
-<#
-        }
-        else if (tmRet == typeof(IAsyncEnumerable<>))
-        {
-#>
-            var task = res.ForEachAsync(_ => { });
-            AssertEx.SucceedOrFailProper(() => task.Wait());
-<#
-        }
-    }
-    else
-    {
-#>
-            // TODO: investigate test hang
+            if (<#=p.Name#> == null)
+                throw new ArgumentNullException(nameof(<#=p.Name#>));
 <#
     }
 }
 #>
+<#
+if (any)
+{
+#>
+
+<#
+}
+#>
+#if CRIPPLED_REFLECTION
+            return <#=cast#><#=provider#>.<#=factory#>(<#=infoofexpr#><#=rem#>);
+#else
+            return <#=cast#><#=provider#>.<#=factory#>(<#=expr#><#=rem#>);
+#endif
         }
 
 <#
