--- a/Ix.NET/Source/System.Interactive.Async.Tests/AsyncQueryableTests.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async.Tests/AsyncQueryableTests.Generated.tt
@@ -1,4 +1,8 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿// Licensed to the .NET Foundation under one or more agreements.
+// The .NET Foundation licenses this file to you under the Apache 2.0 License.
+// See the LICENSE file in the project root for more information. 
+
+<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ assembly name="System.Core" #>
 <#@ assembly name="$(ProjectDir)\..\System.Linq.Async\bin\$(Configuration)\net46\System.Linq.Async.dll" #>
 <#@ import namespace="System.Linq" #>
