Improving AsyncQueryable codegen stability.

--- a/Ix.NET/Source/System.Linq.Async.Queryable.Tests/AsyncQueryableTests.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async.Queryable.Tests/AsyncQueryableTests.Generated.tt
@@ -132,7 +132,9 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
                             return false;
                         })
                         .OrderBy(m => m.Name)
-                        .ThenBy(m => m.GetParameters().Length))
+                        .ThenBy(m => m.IsGenericMethod ? m.GetGenericArguments().Length : 0)
+                        .ThenBy(m => m.GetParameters().Length)
+                        .ThenBy(m => string.Join(", ", m.GetParameters().Select(p => p.Name))))
 {
     var genArgs = m.GetGenericArguments();
 
