--- a/Ix.NET/Source/System.Interactive.Async.Providers.Test/AsyncQueryableExTests.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async.Providers.Test/AsyncQueryableExTests.Generated.tt
@@ -133,7 +133,9 @@ foreach (var m in typeof(AsyncEnumerableEx).GetMethods()
                             return false;
                         })
                         .OrderBy(m => m.Name)
-                        .ThenBy(m => m.GetParameters().Length))
+                        .ThenBy(m => m.IsGenericMethod ? m.GetGenericArguments().Length : 0)
+                        .ThenBy(m => m.GetParameters().Length)
+                        .ThenBy(m => string.Join(", ", m.GetParameters().Select(p => p.Name))))
 {
     var genArgs = m.GetGenericArguments();
 
