Fixing build break.

--- a/AsyncRx.NET/System.Reactive.Async/System/Reactive/Linq/Operators/CombineLatest.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async/System/Reactive/Linq/Operators/CombineLatest.Generated.tt
@@ -42,7 +42,7 @@ for (var j = 1; j <= i; j++)
             {
                 var d = new CompositeAsyncDisposable();
 
-                var <#=obs#> = observer.CombineLatest(selector);
+                var <#=obs#> = AsyncObserver.CombineLatest(observer, selector);
 
 <#
 for (var j = 1; j <= i; j++)
@@ -77,7 +77,7 @@ for (var j = 1; j <= i; j++)
             {
                 var d = new CompositeAsyncDisposable();
 
-                var <#=obs#> = observer.CombineLatest(selector);
+                var <#=obs#> = AsyncObserver.CombineLatest(observer, selector);
 
 <#
 for (var j = 1; j <= i; j++)
