Implementing scheduler rendez-vous.

--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/ToAsync.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/ToAsync.Generated.tt
@@ -167,12 +167,12 @@ for (var i = 0; i <= 16; i++)
                 }
                 catch (Exception ex)
                 {
-                    await observer.OnErrorAsync(ex).RendezVous(scheduler);
+                    await observer.OnErrorAsync(ex).RendezVous(scheduler, ct);
                     return;
                 }
 
-                await observer.OnNextAsync(res).RendezVous(scheduler);
-                await observer.OnCompletedAsync().RendezVous(scheduler);
+                await observer.OnNextAsync(res).RendezVous(scheduler, ct);
+                await observer.OnCompletedAsync().RendezVous(scheduler, ct);
             });
         }
 
@@ -231,12 +231,12 @@ for (var i = 0; i <= 16; i++)
                 }
                 catch (Exception ex)
                 {
-                    await observer.OnErrorAsync(ex).RendezVous(scheduler);
+                    await observer.OnErrorAsync(ex).RendezVous(scheduler, ct);
                     return;
                 }
 
-                await observer.OnNextAsync(Unit.Default).RendezVous(scheduler);
-                await observer.OnCompletedAsync().RendezVous(scheduler);
+                await observer.OnNextAsync(Unit.Default).RendezVous(scheduler, ct);
+                await observer.OnCompletedAsync().RendezVous(scheduler, ct);
             });
         }
 
