--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
@@ -79,7 +79,7 @@ for (var i = 2; i <= 16; i++)
                     {
                         var handler = new Action<<#=genArgs#>>(async (<#=pars#>) =>
                         {
-                            await observer.OnNextAsync((<#=pars#>));
+                            await observer.OnNextAsync((<#=pars#>)).ConfigureAwait(false);
                         });
 
                         var converted = conversion(handler);
